// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCommentTimeline is rendered 1`] = `
<div
  class="ouiCommentTimeline testClass1 testClass2"
>
  <div
    class="ouiCommentTimeline__content"
  >
    <div
      class="ouiCommentTimeline__icon--default ouiCommentTimeline__icon--regular"
    >
      <span
        data-ouiicon-type="user"
      />
    </div>
  </div>
</div>
`;

exports[`OuiCommentTimeline props timelineIcon is rendered 1`] = `
<div
  class="ouiCommentTimeline"
>
  <div
    class="ouiCommentTimeline__content"
  >
    <div
      class="ouiCommentTimeline__icon--regular"
    >
      <div
        aria-label="Mario"
        class="ouiAvatar ouiAvatar--l ouiAvatar--user"
        style="background-color:#f1d86f;color:#000000"
        title="Mario"
      >
        <span
          aria-hidden="true"
        >
          M
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiCommentTimeline props type is rendered 1`] = `
<div
  class="ouiCommentTimeline"
>
  <div
    class="ouiCommentTimeline__content"
  >
    <div
      class="ouiCommentTimeline__icon--default ouiCommentTimeline__icon--update"
    >
      <span
        data-ouiicon-type="dot"
      />
    </div>
  </div>
</div>
`;
